make changes in home possition and registrationdao

--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -5,11 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".VIEWactivity.LoginPage">
+
     <FrameLayout
         android:id="@+id/frameLayout"
-        android:background="@drawable/background_color"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@drawable/background_color">
 
     </FrameLayout>
 
