--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -69,21 +69,21 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
-        android:backgroundTint="#FFFFFF"
-        style="@style/EditTextTheme"
         android:id="@+id/E-mail"
+        style="@style/EditTextTheme"
         android:layout_width="240dp"
         android:layout_height="50dp"
-        android:textColor="#FFFFFF"
-        android:gravity="center"
         android:layout_marginStart="85dp"
         android:layout_marginLeft="85dp"
         android:layout_marginEnd="85dp"
         android:layout_marginRight="85dp"
         android:layout_marginBottom="8dp"
+        android:backgroundTint="#FFFFFF"
         android:ems="10"
+        android:gravity="center"
         android:hint="@string/e_mail"
         android:inputType="textEmailAddress"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -104,15 +104,13 @@
         app:layout_constraintStart_toStartOf="parent" />
 
 
-
-
     <View
         android:id="@+id/right_divider"
         android:layout_width="0dp"
         android:layout_height="1dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginBottom="11dp"
         android:background="#000"
-        android:layout_marginLeft="16dp"
         app:layout_constraintBottom_toTopOf="@+id/imageView2"
         app:layout_constraintEnd_toStartOf="@+id/text"
         app:layout_constraintHorizontal_chainStyle="spread"
@@ -132,14 +130,13 @@
         app:layout_constraintBottom_toTopOf="@+id/imageView2"
         app:layout_constraintEnd_toStartOf="@+id/left_divider"
         app:layout_constraintLeft_toLeftOf="@+id/right_divider"
-        app:layout_constraintStart_toEndOf="@+id/right_divider"
-       />
+        app:layout_constraintStart_toEndOf="@+id/right_divider" />
 
     <View
         android:id="@+id/left_divider"
         android:layout_width="0dp"
-        android:layout_marginRight="16dp"
         android:layout_height="1dp"
+        android:layout_marginRight="16dp"
         android:layout_marginBottom="11dp"
         android:background="#000"
         app:layout_constraintBottom_toTopOf="@+id/imageView3"
@@ -148,30 +145,30 @@
 
 
     <ImageView
-        android:clickable="true"
         android:id="@+id/imageView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="80dp"
         android:layout_marginLeft="80dp"
         android:layout_marginBottom="86dp"
+        android:clickable="true"
+        android:focusable="true"
         android:src="@drawable/ic_facebook"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:focusable="true" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
-        android:clickable="true"
         android:id="@+id/imageView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="80dp"
         android:layout_marginRight="80dp"
         android:layout_marginBottom="86dp"
+        android:clickable="true"
+        android:focusable="true"
         android:src="@drawable/ic_google"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:focusable="true" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
