--- a/app/src/main/res/layout/fragment_register_account.xml
+++ b/app/src/main/res/layout/fragment_register_account.xml
@@ -147,9 +147,9 @@
         android:id="@+id/right_divider"
         android:layout_width="0dp"
         android:layout_height="1dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginBottom="11dp"
         android:background="#000"
-        android:layout_marginLeft="16dp"
         app:layout_constraintBottom_toTopOf="@+id/imageView2"
         app:layout_constraintEnd_toStartOf="@+id/text"
         app:layout_constraintHorizontal_chainStyle="spread"
@@ -169,16 +169,15 @@
         app:layout_constraintBottom_toTopOf="@+id/imageView2"
         app:layout_constraintEnd_toStartOf="@+id/left_divider"
         app:layout_constraintLeft_toLeftOf="@+id/right_divider"
-        app:layout_constraintStart_toEndOf="@+id/right_divider"
-         />
+        app:layout_constraintStart_toEndOf="@+id/right_divider" />
 
     <View
         android:id="@+id/left_divider"
         android:layout_width="0dp"
         android:layout_height="1dp"
+        android:layout_marginRight="16dp"
         android:layout_marginBottom="11dp"
         android:background="#000"
-        android:layout_marginRight="16dp"
         app:layout_constraintBottom_toTopOf="@+id/imageView3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/text" />
